--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "daisyui": "^5.0.0-beta.8",
     "vue": "^3.5.13"
   },
